# netbox-facts

./: .editorconfig  .flake8  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  renovate.json  requirements_dev.txt  setup.cfg  setup.py  sitemap.xml
.devcontainer/: .gitignore  Dockerfile-plugin_dev  devcontainer.json  docker-compose.override.yml  docker-compose.yml  entrypoint-dev.sh  env  requirements-dev.txt
.devcontainer/configuration/: configuration.py  plugins.py
.devcontainer/home/.config/fish/: config.fish  fish_variables
.devcontainer/home/.config/fish/conf.d/: venv.fish
.devcontainer/initializers/: config_templates.yml  custom_fields.yml  device_types.yml  devices.yml  interfaces.yml  locations.yml  providers.yml  sites.yml  virtual_machines.yml
.git-template/hooks/: commit-msg
.githooks/: commit-msg
.github/: release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  mkdocs.yml  pr-title.yml  publish.yml  release-drafter.yml  tests.yml
changelog/: index.html
code-review-2026-02-28/: index.html
contributing/: index.html
docs/: code-review-2026-02-28.md  index.md  zensical.toml
docs/collectors/: arp-ndp.md  bgp.md  ethernet-switching.md  evpn.md  index.md  interfaces.md  inventory.md  l2-circuits.md  lldp.md  ospf.md
docs/getting-started/: configuration.md  installation.md  quick-start.md
docs/plans/: 2026-02-26-phase2-phase3-design.md  2026-02-26-phase2-phase3-implementation.md  2026-03-06-bgp-routing-integration-design.md  2026-03-06-bgp-routing-integration-plan.md
docs/user-guide/: collection-plans.md  detect-only.md  facts-reports.md  mac-tracking.md  scheduling.md
netbox_facts/: __init__.py  choices.py  constants.py  exceptions.py  fields.py  filtersets.py  forms.py  jobs.py  models.py  navigation.py  signals.py  tables.py  tasks.py  template_content.py  urls.py  views.py
netbox_facts/api/: nested_serializers.py  serializers.py  urls.py  views.py
netbox_facts/helpers/: __init__.py  applier.py  collector.py  napalm.py  netbox.py
netbox_facts/management/commands/: recover_stale_jobs.py  sync_oui.py
netbox_facts/migrations/: 0001_initial.py  0002_alter_macvendor_options_macvendor_vendor_name.py  0002_macvendor_comments.py  0003_alter_macvendor_manufacturer.py  0003_alter_macvendor_options_alter_macvendor_managers_and_more.py  0004_alter_macvendor_mac_prefix.py  0004_remove_collectordefinition_enabled_and_more.py  0005_collectordefinition_interval_and_more.py  0005_macaddress_description_and_more.py  0006_alter_collectordefinition_options_and_more.py  0006_rename_seen_by_interfaces_macaddress_known_by_and_more.py  0007_alter_collectordefinition_priority.py  0008_collectionjob_job_type.py  0009_collectionjob_result.py  0010_rename_collectordefinition_collector_and_more.py  0011_collector_enabled_collector_run_as_and_more.py  0012_collector_last_run.py  0013_remove_collector_schedule_at_and_more.py  0014_collector_ip_addresses.py  0015_rename_collector_collectionplan_and_more.py  0016_collectionplan_scheduled_at.py  0017_macaddress_discovery_method.py  0018_remove_macaddress_last_seen.py  0019_netbox_facts.py  0020_netbox_facts.py  0021_macaddress_last_seen.py  0022_netbox_facts.py  0023_factsreport_factsreportentry_collectionplan_detect_only.py  0024_netbox_facts.py  0025_factsreport_error_message.py  0026_remove_factsreport_comments_and_more.py
netbox_facts/models/: __init__.py  abstract.py  collection.py  collection_plan.py  facts_report.py  mac.py
netbox_facts/napalm/: helpers.py  junos.py
netbox_facts/napalm/utils/: junos_views.py  junos_views.yml
netbox_facts/templates/netbox_facts/: collectionplan.html  collector_result.html  collectordefinition.html  collectordefinition_instances.html  factsreport.html  factsreport_entries.html  macaddress.html  macvendor.html  macvendor_instances.html
netbox_facts/templates/netbox_facts/htmx/: collector_result.html
netbox_facts/templates/netbox_facts/inc/: ipaddress_mac_addresses.html
netbox_facts/tests/: test_api.py  test_applier.py  test_facts_report.py  test_filtersets.py  test_helpers.py  test_jobs.py  test_models.py  test_rate_limiting.py  test_signals.py  test_table_init.py
netbox_facts/utilities/: rq.py
plans/2026-02-26-phase2-phase3-design/: index.html
plans/2026-02-26-phase2-phase3-implementation/: index.html
plans/2026-03-06-bgp-routing-integration-design/: index.html
plans/2026-03-06-bgp-routing-integration-plan/: index.html
search/: search_index.json
