[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "netbox-facts"
description = "Gather operational facts from supported NetBox Devices"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [
    { name = "Jonathan Senecal", email = "contact@jonathansenecal.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
keywords = ["netbox", "netbox-plugin", "napalm", "network-automation"]
dependencies = [
    "Django>=5.2,<5.3",
    "napalm~=5.1.0",
    "requests~=2.34.0",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/jsenecal/netbox-facts"
Documentation = "https://jsenecal.github.io/netbox-facts/"
Repository = "https://github.com/jsenecal/netbox-facts"
Issues = "https://github.com/jsenecal/netbox-facts/issues"

[project.optional-dependencies]
routing = ["netbox-routing"]
dev = [
    "netbox-routing",
    "bump-my-version",
    "pre-commit>=4.0.0",
    "pytest",
    "pytest-django>=4.5.0",
    "pytest-cov>=3.0.0",
    "ruff",
]
docs = [
    "zensical",
]

[tool.hatch.version]
path = "netbox_facts/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["netbox_facts"]

[tool.ruff]
line-length = 120
target-version = "py312"
extend-exclude = ["**/migrations/*.py"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "DJ", "PIE"]
# N818 (exception names) ignored: existing CollectionTimeout / CollectionFailed
# / OperationNotSupported predate the convention. Renaming is a follow-up.
# S104 (bind 0.0.0.0) is a reachable default; the CollectionPlan field
# accepts user-supplied addresses at runtime so it's not a hardcoded risk.
# TODO(future code-quality pass): F811, B007, C408 are pre-existing minor
# issues that should be addressed after this normalization PR lands so the
# toolkit-only commit stays focused.
ignore = ["E203", "E266", "E501", "N806", "N818", "S101", "S104", "DJ01", "DJ008", "DJ001", "F811", "B007", "C408"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"migrations/*" = ["N806", "N999"]
"netbox_facts/tests/*" = ["S101", "S105", "S106", "E402", "F841", "N811", "N814", "B017", "F811"]
"tests/*" = ["S101", "S105", "S106", "E402", "F841"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "netbox.settings"
testpaths = ["netbox_facts/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=netbox_facts --cov-report=term-missing --reuse-db"

[tool.bumpversion]
current_version = "0.1.1"
commit = true
tag = true
tag_name = "v{new_version}"
allow_dirty = false
message = "chore: bump version {current_version} -> {new_version}"
tag_message = "Release v{new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'current_version = "{current_version}"'
replace = 'current_version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "netbox_facts/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'
